--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<title>Nezir Sefic CV</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
 	<h1>Curriculum vitae</h1>
-		<hr>
+	<hr>
 		<p></p>
 
-		<img src="wave.jpg" alt="Hello!" title="Hi!">
+		<img src="wave.jpg" alt="Hello!" title="Hi!" class="profile">
 
 	<h2><b>Education</b></h2>
 		<ol type="I">
@@ -36,6 +37,7 @@
 		
  		<h3><p>Languages</p></h3>
 
+		 <!-- Need a better solution for the flags-->
  		<table>
   		<tr>
   		<td></td>	
@@ -48,7 +50,7 @@
   			<td colspan="3">Aquired at: Goethe Institut Bosna i Herzegovi </td>
   		</tr>	
   		<tr>
-  		<th>German</th>	
+		<th><li class="german">German</li></th>		
     	<td>A1/A2</td>
     	<td>A1/A2</td>
     	<td>A1/A2</td>
@@ -58,7 +60,7 @@
   			<td colspan="3">Aquired at: Centar za strane jezike Follow Me Altera lingua </td>
   		</tr>
   		<tr>
-    	<th>English</th>		
+		<th><li class="english">English</li></th>		
     	<td>C1</td>
     	<td>C1</td>
     	<td>C1</td>
@@ -68,7 +70,7 @@
   			<td colspan="3">Aquired at: Spoken Turkish I & II IUS (<acronym title="International University of Sarajevo">IUS</acronym>) </td>
   		</tr>
  		<tr>
-    	<th>Turkish</th>	
+    	<th><li class="turkish">Turkish</li></th>
     	<td>B2</td>
     	<td>B2</td>
     	<td>B2</td>
@@ -78,7 +80,6 @@
 		<h3><p>Other skills</p></h3>
  			Music: Completed Elementary Music School Mladen Pozajić Sarajevo, instrument: piano <br>
  			Drivers license B category (driving experience from 2018. onward)
-
  		<hr>
  	<h2><b>Find me</b></h2>
 
@@ -88,7 +89,7 @@
 	<a href="mailto:190302064@student.ius.edu.ba">Shoot me an email!</a>
     </address>
 	<p>
-		<a href="#top"><img src="top.png" alt="Top"></a>		
+		<a href="#top"><img src="top.png" class="button" alt="Top"></a>		
 	</p>
 
 </body>
